Removed testimonials and horizontal scroll bar issue on service request index page.

--- a/app/assets/stylesheets/service_request.scss
+++ b/app/assets/stylesheets/service_request.scss
@@ -27,7 +27,6 @@
 }
 
 .map-container {
-  margin-top: -30px;
   #google-map {
     height: calc(100vh - 120px);
     overflow: hidden;
